# frunze-reference-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  platformio.ini
avr-attiny85/: CMakeLists.txt
avr-attiny85/docs/schematics/reference-project/: TL3342.skp  TL3342.wrl  reference-project-rescue.lib  reference-project.emn  reference-project.emp  reference-project.kicad_pcb  reference-project.kicad_pcb-bak  reference-project.lib  reference-project.net  reference-project.pro  reference-project.sch  reference-project.step  reference-project.stp  reference-project.wrl  reference-project.xml  sym-lib-table
avr-attiny85/lib/uart/: uart.h
crates/stm32f0x1/: Cargo.toml
crates/stm32f0x1/src/: lib.rs
crates/stm32f0x1/src/adc/: mod.rs
crates/stm32f0x1/src/can/: mod.rs
crates/stm32f0x1/src/dbgmcu/: apb1_fz.rs
crates/stm32f0x1/src/dma1/: mod.rs
crates/stm32f0x1/src/flash/: mod.rs
crates/stm32f0x1/src/interrupt/: mod.rs
crates/stm32f0x1/src/rcc/: apb1enr.rs  apb1rstr.rs
crates/stm32f0x1/src/syscfg_comp/: mod.rs
crates/stm32f0x1/src/tim14/: mod.rs
crates/stm32f0x2/: Cargo.toml
crates/stm32f0x2/src/: lib.rs
crates/stm32f0x2/src/interrupt/: mod.rs
crates/stm32f0x2/src/rtc/: mod.rs
crates/stm32f0x2/src/stk/: mod.rs
crates/stm32f0x2/src/tim1/: mod.rs
crates/stm32f0x2/src/tsc/: mod.rs
crates/stm32f0x2/src/usb/: mod.rs
docs/schematics/74HC165D-breakout-board/: 16-pin SOIC+TSSOP-Edge.Cuts.gbr  16-pin SOIC+TSSOP-Top.gbr  16-pin SOIC+TSSOP.drl  cutout.nc  drill.nc  flatcam-project  isolation.nc
docs/schematics/reference-project/: _autosave-reference-project.kicad_pcb  reference-project-cache.lib  reference-project.bak  reference-project.kicad_pcb  reference-project.kicad_pcb-bak  reference-project.net  reference-project.pro  reference-project.sch  reference-project.stp  reference-project.xml  reference-project1.step  reference_project.FCStd  reference_project.FCStd1
lib/piso/: piso.h
src/: main.c  main.cpp  uart.c  user_config.h
stm32-f0/: CMakeLists.txt  README.md  platformio.ini
stm32-f0-rust/: .gitignore  Cargo.toml  README.md  build.rs  memory.x  memory_stm32f0x1.x  memory_stm32f0x2.x  openocd.cfg
stm32-f0-rust/.cargo/: config
stm32-f0-rust/docs/schematics/TSSOP-20x6.5mmx4.4mm-Breakout/: board.kicad_pcb
stm32-f0-rust/docs/schematics/TSSOP-20x6.5mmx4.4mm-Breakout/cnc/: board-bottom.gbr  board-edge.cuts.gbr  cutout-1.5mm.nc  flatcam  holes-0.9mm.nc
stm32-f0-rust/docs/schematics/blocks/bus/: bus-cache.lib  bus.kicad_pcb  bus.kicad_pcb-bak  bus.net  bus.sch  bus.stp
stm32-f0-rust/docs/schematics/blocks/button/: button-cache.lib  button.kicad_pcb  button.net  button.sch  button.step
stm32-f0-rust/docs/schematics/blocks/cr2032/: cr2032-cache.lib  cr2032.kicad_pcb  cr2032.net  cr2032.sch  cr2032.step
stm32-f0-rust/docs/schematics/blocks/stm32/: stm32-cache.lib  stm32.bak  stm32.kicad_pcb  stm32.kicad_pcb-bak  stm32.net  stm32.sch  stm32.stp
stm32-f0-rust/docs/schematics/blocks/stm32/manufacturing/: cutout.nc  flatcam-project  holes.nc  stm32-Edge.Cuts.gbr  stm32-F.Cu.gbr  stm32.drl  traces.nc
stm32-f0-rust/examples/: blinky-stm32f0x2.rs  blinky.rs
stm32-f0-rust/src/: _backup.rs  beeper.rs  button.rs  lib.rs  main.rs  rtc.rs  systick.rs
stm32-f0/src/: main.c
(+47 files in other folders)
