[package]
name = "frunze-reference-project"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
description = "Reference project for Frunze"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/azasypkin/frunze-reference-projects"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
lto = true
debug = true

[dependencies]
stm32f0x2 = { path = "../crates/stm32f0x2" }

[dependencies.stm32f0x1]
version = "0.1.0"
path = "../crates/stm32f0x1"
features = ["rt"]

[dependencies.cortex-m]
version = "0.4.3"

[dependencies.cortex-m-rt]
version = "0.3.14"
features = ["abort-on-panic"]

[dependencies.cortex-m-semihosting]
version = "0.2.0"
