[package]
name = "frunze-reference-project"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
description = "Reference project for Frunze"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/azasypkin/frunze-reference-projects"

[profile.release]
lto = true
debug = true

[dependencies]
cortex-m-rt = "0.4.0"
cortex-m = "0.4.3"
cortex-m-semihosting = "0.2.0"
panic-semihosting = "0.1.0"

[dependencies.stm32f0x1]
version = "0.1.0"
path = "../crates/stm32f0x1"
features = ["rt"]
optional = true

[dependencies.stm32f0x2]
version = "0.1.0"
path = "../crates/stm32f0x2"
features = ["rt"]
optional = true

[features]
stm32f051 = ["stm32f0x1"]
stm32f042 = ["stm32f0x2"]


