[package]
name = "frunze-reference-project"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
description = "Reference project for Frunze"
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/azasypkin/frunze-reference-projects"

#cargo-features = ["profile-overrides"]

[profile.release]
lto = true
debug = true
opt-level = "s"

[profile.dev]
lto = true
incremental = false
opt-level = 1

#[profile.dev.overrides."*"]
#opt-level = 3

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.2.0"
stm32f0x1 = { version = "0.1.0", optional = true, path = "../crates/stm32f0x1" }
stm32f0x2 = { version = "0.1.0", optional = true, path = "../crates/stm32f0x2" }

[features]
stm32f051 = ["stm32f0x1", "stm32f0x1/rt"]
stm32f042 = ["stm32f0x2", "stm32f0x2/rt"]


