[package]
name = "stm32f0x2"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.1"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.5.0"

[features]
rt = ["cortex-m-rt/device", "cortex-m/inline-asm", "cortex-m/const-fn"]
